[package]
name = "ls-qpack-sys"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["Biagio Festa"]
edition = "2021"
description = "QPACK (RFC 9204) Rust binding to C library ls-qpack"
keywords = ["qpack", "quic", "http3", "rfc-9204", "network"]
repository = "https://github.com/BiagioFesta/ls-qpack-rs"
readme = "../README.md"
workspace = ".."

[build-dependencies]
bindgen = "0.66.1"
cmake = "0.1.50"

[dependencies]
libc = "0.2.146"
