[package]
name = "ls-qpack"
version = "0.1.3"
license = "MIT OR Apache-2.0"
authors = ["Biagio Festa"]
edition = "2021"
description = "QPACK Field Compression for HTTP/3 (RFC 9204)"
keywords = ["qpack", "quic", "http3", "rfc-9204", "network"]
repository = "https://github.com/BiagioFesta/ls-qpack-rs"
readme = "../README.md"
workspace = ".."

[dependencies]
libc = "0.2.146"
ls-qpack-sys = { version = "0.1.3", path = "../ls-qpack-sys" }
